0.7.1 (2009-09-27)
==================

- Minimally get docs into shape for First PyPI release; no
  functionality changes from 0.7.0.

0.7.0 (2009-08-03)
==================

- Fixed bug in ``DocumentMap.add`` which left orphan mappings for previous
  addresses when adding an existing docid with a new address.

- Added the ability to sort by text relevance. Use the name of the text
  index as the ``sort_index`` in the query.

0.6.2 (2009-04-15)
==================

- Add metadata-related APIs to ``repoze.catalog.document.DocumentMap``:
  ``add_metadata``, ``remove_metadata``, ``get_metadata``.
  "Metadata" is a freeform set of key/value pairs related to a docid.
  See the API documentation for more information.

0.6.1 (2009-02-25)
==================

- Fixed constructor inheritance issues which kept ``repoze.catalog``
  from working under Python 2.6.  Note that this change involved removing
  the ``*args, **kw`` arguments from index constructors:  those values were
  never used, but had (bogus) tests.

0.6.0 (2009-02-16)
==================

- N-Best ascending fieldindex sort was being chosen incorrectly when
  there was no limit.  Symptom: ``RuntimeError, 'n-best used without
  limit'``.

0.5.9 (2009-02-16)
==================

- Add ``reindex_doc`` method as an alias for ``index_doc`` to both
  CatalogFieldIndex and CatalogKeywordIndex (for performance,
  ``index_doc`` for both indexes has special case code for reindexing).

0.5.8 (2009-02-16)
==================

- Speed up path2 index attribute search by using __getitem__ rather
  than .get in some places.

- Override textindex reindex_doc method: calling index_doc only
  instead of calling unindex_doc and then index_doc is much more
  efficient.

0.5.7 (2009-02-14)
==================

- Attributes returned to attribute checker were not correct.

0.5.6 (2009-02-12)
==================

- Add "attribute discriminator" and "attribute checker" support to
  path2 index.  If an index is created with an attribute