@@ -34,6 +34,28 @@ class TestDocumentMap(unittest.TestCase):
         self.assertEqual(map.address_for_docid(docid), '/address')
         self.assertEqual(map.docid_for_address('/address'), docid)
 
+    def test_add_with_same_address_repeatedly_replaces(self):
+        map = self._makeOne()
+        map.add('yup', 1)
+        map.add('yup', 2)
+        map.add('yup', 3)
+        self.assertEqual(len(map.docid_to_address), 1)
+        self.assertEqual(len(map.address_to_docid), 1)
+        self.assertEqual(map.docid_to_address.get(1), None)
+        self.assertEqual(map.docid_to_address.get(2), None)
+        self.assertEqual(map.docid_to_address.get(3), 'yup')
+        self.assertEqual(map.address_to_docid['yup'], 3)
+
+    def test_add_address_None(self):
+        map = self._makeOne()
+        map.add(None, 1)
+        map.add(None, 2)
+        self.assertEqual(len(map.docid_to_address), 1)
+        self.assertEqual(len(map.address_to_docid), 1)
+        self.failIf(1 in map.docid_to_address)
+        self.assertEqual(map.docid_to_address.get(2), None)
+        self.assertEqual(map.address_to_docid[None], 2)
+
     def test_add_existing_docid_new_address_replaces_old(self):
         map = self._makeOne()
         old_docid = map.add('/address1')
@@ -43,12 +65,12 @@ class TestDocumentMap(unittest.TestCase):
         self.assertEqual(map.docid_for_address('/address2'), old_docid)
         self.assertEqual(new_docid, old_docid)
 
-    def test_add_existing_docid_preserves_metadata(self):
+    def test_add_existing_docid_removes_metadata(self):
         map = self._makeOne()
         docid = map.add('/address1')
         map.add_metadata(docid, {'a': 1})
         map.add('/address2', docid)
-        self.assertEqual(dict(map.get_metadata(docid)), {'a': 1})
+        self.assertRaises(KeyError, map.get_metadata, docid)
 
     def test_remove_docid_nonesuch(self):
         map = self._makeOne()
@@ -67,6 +89,19 @@ class TestDocumentMap(unittest.TestCase):
         self.assertEqual(map.docid_for_address('/address1'), None)
         self.assertRaises(KeyError, map.get_metadata, 1)
 
+    def test_remove_docid_map_out_of_sync(self):
+        map = self._makeOne()
+        map.add('/address1', 1)
+        map.add_metadata(1, {'a': 1})
+        map.address_to_docid['/address1'] = 2
+        result = map.remove_docid(1)
+        self.assertEqual(result, True)
+        self.assertEqual(map.address_for_docid(1), None)
+        self.assertEqual(map.docid_for_address('/address1'), None)
+        self.assertRaises(KeyError, map.get_metadata, 1)
+        self.assertEqual(list(map.docid_to_address), [])
+        self.assertEqual(list(map.address_to_docid), [])
+
     def test_remove_address_nonesuch(self):
         map = self._makeOne()
         result = map.remove_address('/address1')
@@ -83,6 +118,21 @@ class TestDocumentMap(unittest.TestCase):
         self.assertEqual(map.address_for_docid(1), None)
         self.assertEqual(map.docid_for_address('/address1'), None)
         self.failIf(1 in map.docid_to_metadata)
+
+    def test_remove_address_map_out_of_sync(self):
+        map = self._makeOne()
+        map.add('/address1', 1)
+        map.add_metadata(1, {'a': 1})
+        map.docid_to_address[1] = '/address2'
+        map.address_to_docid['/address2'] = 3
+        result = map.remove_address('/address1')
+        self.assertEqual(result, True)
+        self.assertEqual(map.address_for_docid(1), None)
+        self.assertEqual(map.docid_for_address('/address1'), None)
+        self.assertRaises(KeyError, map.get_metadata, 1)
+        self.assertEqual(list(map.docid_to_address), [])
+        self.assertEqual(list(map.address_to_docid), [])
+
 
     def test_add_metadata_docid_not_in_addressmap(self):
         map = self._makeOne()
