@@ -1,8 +1,6 @@
 [nosetests]
+match=^test
+where=repoze/catalog
 nocapture=1
-with-coverage=1
 cover-erase=1
 cover-package=repoze.catalog
-
-[easy_install]
-index_url = http://dist.repoze.org/lemonade/dev/simple
